[package]
name = "nix-source"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
argh = "0.1.12"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.2"
mailparse = "0.14.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
ssri = "9.2.0"
ureq = "2.9.1"
url = { version = "2.5.0", features = ["serde"] }
which = "6.0.0"
